Fixup clipping of payment method text

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -757,7 +757,7 @@
     margin-left: 20px;
     text-align: left;
     text-overflow: ellipsis;
-    overflow: hidden;
+    overflow-x: hidden;
 
     .braintree-method__label--small {
       font-size: 13px;
